@@ -1,6 +1,7 @@
 {
-  "ecmaFeatures" : {
-    "jsx" : true
+  "env" : {
+    "node": true,
+    "browser": true
   },
   "rules" : {
     "brace-style": [2, "stroustrup", { "allowSingleLine": true }],
