@@ -1,26 +1,0 @@
-ui: tape
-browsers:
-  - name: chrome
-    version: 39..dev
-    platform: Windows 2012 R2 # Win 8.1
-  - name: firefox
-    version: 33..latest
-    platform: Windows 2012 R2 # Win 8.1
-  - name: ie
-    version: 8..11
-  - name: safari
-    version: 5..latest
-  - name: iphone
-    version: 6.0..latest
-  - name: ipad
-    version: 6.0..latest
-  - name: android
-    version: 4.1..latest
-scripts:
-browserify:
-  # will inline bulk-require calls
-  # https://github.com/substack/bulkify
-  # https://github.com/substack/bulk-require
-  # see test/index.js for a concrete example
-  - transform: bulkify
-  - transform: envify
