@@ -1,0 +1,12 @@
+How to contribute?
+
+Basic flow:
+- fork this repository
+- setup the project: `npm install`
+- start dev mode `npm run dev` and open http://localhost:8090/__zuul
+- you can also run both browser and node.js tests by using `npm test`
+- code, add a [test](./test/) for every fix or new feature
+- commit
+- open a pull request
+
+We will then review your pull request and makes sure your fix helps the community.
