@@ -3,6 +3,8 @@ var test = require( "tape" );
 var algoliaSearchHelper = require( "../../index.js" );
 
 test( "getQueryParameter", function( t ) {
+  var partial = require( "lodash/function/partial" );
+
   var helper = algoliaSearchHelper( null, null, {
     facets : [ "facet1" ],
     minWordSizefor1Typo : 8,
@@ -13,7 +15,7 @@ test( "getQueryParameter", function( t ) {
   t.equal( helper.getQueryParameter( "minWordSizefor1Typo" ), 8 );
   t.equal( helper.getQueryParameter( "ignorePlurals" ), true );
 
-  t.throws( helper.getQueryParameter.bind( helper, "unknown" ) );
+  t.throws( partial( helper.getQueryParameter, "unknown" ) );
 
   t.end();
 } );
